--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:layout_toEndOf="@+id/input1"
         android:layout_alignBottom="@+id/input1"/>
 
-    <TextView
+    <EditText
         android:id="@+id/input2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
